--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cards",
   "version": "1.0.0",
+  "homepage": "https://korvenhasta.github.io/cards.github.io",
   "description": "Версия v 1.0   Сайт, в котором можно поделиться с другими пользователями картинками. Их можно добавлять, удалять и лайкать. Также можно отредактировать профиль.   Создавался в рамках обучения на курсе Яндекс Практикум по фронтенд разработке.   Технологии: HTML, CSS, БЭМ, JavaScript, работа с запросами к API, GIT.   Для просмотра страницы перейдите по ссылке: https://korvenhasta.github.io/cards.github.io. Для работы необходимо указать адрес бэкенда и авторизационный токен в файле script.js",
   "main": "script.js",
   "scripts": {
